--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "axios": "^1.5.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.1",
     "react": "^18.2.0",
