--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
