--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.1"
   }
