--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "server",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {},
   "author": "",
   "license": "ISC",
